<resources>
    <string name="app_name">ARCoreDiscogs</string>
    <string name="search">Search</string>
    <string name="content_description_search">Description</string>
    <string name="more">more</string>
    <string name="content_description_more">More</string>
    <string name="todo">TODO</string>
    <string name="recentButton">RECENT</string>
    <string name="button">Button</string>
    <string name="fit_image_to_scan">fit image to scan</string>
    <string name="detected_img_need_more_info">Image detected but needs more information</string>
    <string name="track_stop">Trcking stopped</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_placeholder">placeholder</string>
    <string name="ar_search">AR Search</string>
    <string name="fab">Scan Record Button</string>
    <string name="scan_button">Scan Button</string>
    <string name="barcode_scanner">BARCODE SCANNER</string>
    <string name="Card_butt">CARD OPEN</string>
    <string name="album_cover">Album Cover</string>
    <string name="album_name">Album name</string>
    <string name="artist">Artist</string>
    <string name="genre">genre</string>
    <string name="released">Released</string>
    <string name="tracklist">Tracklist</string>
    <string name="intro">"Welcome to the discogs ARCore scanner thingamajiggy, this application is EXTREMELY Work in Progress so keep that in mind while using, If you'd like to contribute to the project and help make it less sucky head on over to our github page."</string>
    <string name="logo">DiscogsLogo</string>
    <string name="github_page">GitHub page</string>
    <string name="fabclicker">Press the FAB below to open up the ARCore Image scanning fragment.</string>
</resources>