<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        card_view:cardCornerRadius="4dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="159dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    tools:src="@tools:sample/avatars"
                    android:layout_width="359dp"
                    android:layout_height="160dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/album_cover" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/ralbum"
                        android:layout_width="match_parent"
                        android:layout_height="58dp"
                        android:gravity="center"
                        android:text="@string/album_name"
                        android:textAlignment="center"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/rartist"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/artist" />

                    <TextView
                        android:id="@+id/rgenre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/genre" />

                    <TextView
                        android:id="@+id/rreleased"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/released" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tracklist"
                android:textColor="#000000"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_resultsrv"
                android:layout_width="match_parent"
                android:layout_height="100dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</FrameLayout>